# models/asignacion_evaluador_item.go
@@ -11,13 +11,12 @@ import (
 )
 
 type AsignacionEvaluadorItem struct {
-	Id                       int                     `orm:"column(id);pk;auto"`
-	AsignacionEvaluadorId    *AsignacionEvaluador    `orm:"column(asignacion_evaluador_id);rel(fk)"`
-	ItemId                   *Item                   `orm:"column(item_id);rel(fk)"`
-	Activo                   bool                    `orm:"column(activo);default(true)"`
-	RolAsignacionEvaluadorId *RolAsignacionEvaluador `orm:"column(rol_asignacion_evaluador_id);rel(fk)"`
-	FechaCreacion            time.Time               `orm:"auto_now_add;column(fecha_creacion);type(timestamp without time zone);null"`
-	FechaModificacion        time.Time               `orm:"auto_now;column(fecha_modificacion);type(timestamp without time zone);null"`
+	Id                    int                  `orm:"column(id);pk;auto"`
+	AsignacionEvaluadorId *AsignacionEvaluador `orm:"column(asignacion_evaluador_id);rel(fk)"`
+	ItemId                *Item                `orm:"column(item_id);rel(fk)"`
+	Activo                bool                 `orm:"column(activo);default(true)"`
+	FechaCreacion         time.Time            `orm:"auto_now_add;column(fecha_creacion);type(timestamp without time zone);null"`
+	FechaModificacion     time.Time            `orm:"auto_now;column(fecha_modificacion);type(timestamp without time zone);null"`
 }
 
 func (t *AsignacionEvaluadorItem) TableName() string {
